--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = "3.0"
+toml = "0.5"
+serde = { version = "1.0", features = ["derive"] }
+thiserror = "1.0"
