--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ clap = "3.0"
 toml = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
+tempfile = "3.1"
+log = "0.4"
+env_logger = "0.9"
+httpmock = "0.7.0"
