--- a/examples/bookworm/virtual-package/pkg-builder.toml
+++ b/examples/bookworm/virtual-package/pkg-builder.toml
@@ -1,28 +1,39 @@
-[config]
-arch = "amd64"
+[package]
+spec_file = "test-virtual-package.sss"
 package_name = "test-virtual-package"
 version_number = "1.0.0"
+revision_number = "1"
 tarball_url = ""
 git_source = ""
-package_is_virtual = true
-lang_env = ""
-debcrafter_version = "latest"
-spec_file = "test-virtual-package.sss"
-codename="bookworm"
-pkg_builder_version="0.1"
+# virtual | git | default
+package_type="virtual"
 homepage="https://github.com/eth-pkg/pkg-builder#examples"
 
-[sbuild]
+[build]
+codename="bookworm"
+arch = "amd64"
+lang_env = ""
+# TODO not used
+pkg_builder_version="0.1"
+# TODO not used yet
+debcrafter_version = "latest"
 run_lintian=false
 run_piuparts=false
-run_autopkgtest=false 
-
-[options]
+run_autopkgtest=false
+# package directory
 workdir=".pkg-builder/packages"
+
+[cli_options]
+# not used
 is_ci=false
 log="info"
+log_to="file"
 reuse_previous_build=false
 
-[hashes]
-package_hash=""
+[verify]
+# if tarball_url is specified
+tarball_hash=""
+# if git_source is specified and package_is_git
+git_commit=""
+# output hash
 bin_bash=""
