--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "3.0"
-toml = "0.5"
+clap = { version = "4.5.4", features = ["derive"] }
+toml = "0.8.12"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
 tempfile = "3.1"
 log = "0.4"
-env_logger = "0.9"
+env_logger = "0.11.3"
 httpmock = "0.7.0"
-git2 = "0.13"
-cargo_metadata = "0.14"
+git2 = "0.18.3"
+cargo_metadata = "0.18"
 test-case = "3.3.1"
+glob = "0.3.1"
