--- a/examples/bookworm/virtual-package/pkg-builder.toml
+++ b/examples/bookworm/virtual-package/pkg-builder.toml
@@ -21,7 +21,7 @@ run_lintian=false
 run_piuparts=false
 run_autopkgtest=false
 # package directory
-workdir=".pkg-builder/packages"
+workdir="~/.pkg-builder/packages"
 
 [cli_options]
 # not used
