--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,5 @@ test-case = "3.3.1"
 glob = "0.3.1"
 dirs = "5.0.1"
 rand = "0.9.0-alpha.1"
-shellexpand = "2.0"
+shellexpand = "3.1.0"
+eyre = "0.6.12"
