--- a/examples/bookworm/dotnet/hello-world/pkg-builder.toml
+++ b/examples/bookworm/dotnet/hello-world/pkg-builder.toml
@@ -3,16 +3,21 @@ spec_file = "hello-world.sss"
 package_name = "hello-world"
 version_number = "1.0.0"
 revision_number = "1"
-tarball_url = "hello-world-1.0.0.tar.gz"
-git_source = ""
+homepage="https://github.com/eth-pkg/pkg-builder#examples"
+
+[package_type]
 # virtual | git | default
 package_type="default"
-homepage="https://github.com/eth-pkg/pkg-builder#examples"
+tarball_url = "hello-world-1.0.0.tar.gz"
+tarball_hash = ""
+
+[package_type.language_env]
+language_env = "dotnet"
+dotnet_version = "8.0"
 
 [build_env]
 codename="bookworm"
 arch = "amd64"
-lang_env = "csharp"
 # TODO not used yet
 pkg_builder_version="0.1"
 # TODO not used yet
