--- a/examples/bookworm/c/hello-world/pkg-builder.toml
+++ b/examples/bookworm/c/hello-world/pkg-builder.toml
@@ -3,11 +3,16 @@ spec_file = "hello-world.sss"
 package_name = "hello-world"
 version_number = "1.0.0"
 revision_number = "1"
-tarball_url = "hello-world-1.0.0.tar.gz"
-git_source = ""
+homepage="https://github.com/eth-pkg/pkg-builder#examples"
+
+[package_type]
 # virtual | git | default
 package_type="default"
-homepage="https://github.com/eth-pkg/pkg-builder#examples"
+tarball_url = "hello-world-1.0.0.tar.gz"
+tarball_hash = ""
+
+[package_type.language_env]
+language_env = "c"
 
 [build_env]
 codename="bookworm"
