--- a/examples/bookworm/c/hello-world/pkg-builder.toml
+++ b/examples/bookworm/c/hello-world/pkg-builder.toml
@@ -9,7 +9,7 @@ homepage="https://github.com/eth-pkg/pkg-builder#examples"
 # virtual | git | default
 package_type="default"
 tarball_url = "hello-world-1.0.0.tar.gz"
-tarball_hash = ""
+tarball_hash = "TODO"
 
 [package_type.language_env]
 language_env = "c"
