--- a/examples/bookworm/nim/hello-world/pkg-builder.toml
+++ b/examples/bookworm/nim/hello-world/pkg-builder.toml
@@ -9,9 +9,7 @@ homepage="https://github.com/eth-pkg/pkg-builder#examples"
 [package_type]
 package_type="default"
 tarball_url = "hello-world-1.0.0.tar.gz"
-tarball_hash=""
-git_source = ""
-git_commit=""
+tarball_hash="TODO"
 
 [package_type.language_env]
 language_env = "nim"
