test: use ubuntu sbuild as deps are different

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,13 +32,14 @@ jobs:
       - name: Checkout sbuild Repository
         uses: actions/checkout@v2
         with:
-          repository: eth-pkg/sbuild
-          ref: main
+          repository: eth-pkg/sbuild-ubuntu
+          ref: ubuntu/devel
 
       - name: Install Build Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y dh-python dh-sequence-python3 libyaml-tiny-perl python3-all debhelper-compat libdpkg-perl libexception-class-perl libfilesys-df-perl libmime-lite-perl
+          sudo apt-get install -y dh-python dh-sequence-python3 libyaml-tiny-perl python3-all 
+          sudo apt-get install -y debhelper-compat libdpkg-perl libexception-class-perl libfilesys-df-perl libmime-lite-perl
 
       - name: Build Sbuild
         run: |
