--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,48 +12,18 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  sbuild:
-    runs-on: ubuntu-latest
-    steps:  
-      # - name: Cache sbuild
-      #   uses: actions/cache@v4
-      #   with:
-      #     path: |
-      #       /var/cache/apt/archives
-      #       /usr/bin/sbuild
-      #     key: sbuild-${{ runner.os }}-${{ hashFiles('**/apt.txt') }}
-
-      # - if: ${{ steps.cache-sbuild.outputs.cache-hit != 'true' }}
-      - name: Check if sbuild is installed
-        run: dpkg -s sbuild && exit 1 || exit 0
-        id: check-installed
-        continue-on-error: true
-  
-      - name: Checkout sbuild Repository
-        uses: actions/checkout@v2
-        with:
-          repository: eth-pkg/sbuild-ubuntu
-          ref: ubuntu/devel
-
-      - name: Install Build Dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y dh-python dh-sequence-python3 libyaml-tiny-perl python3-all 
-          sudo apt-get install -y debhelper-compat libdpkg-perl libexception-class-perl libfilesys-df-perl libmime-lite-perl
-
-      - name: Build Sbuild
-        run: |
-          dpkg-buildpackage -us -uc
-
-      - name: Install Sbuild
-        run: |
-          sudo dpkg -i ../sbuild_0.85.6_all.deb ../libsbuild-perl_0.85.6_all.deb
   test:
     runs-on: ubuntu-latest
-    needs: sbuild
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Sbuild setup
+        run: |
+          sudo apt-get update
+          # Note this is an older version of sbuild, no need to patch it, yet
+          sudo apt install debhelper sbuild schroot ubuntu-dev-tools
+          sudo apt-get install pkg-config libssl-dev uidmap
 
       - name: Build
         run: cargo build --verbose
