--- a/overrides/.sbuildrc
+++ b/overrides/.sbuildrc
@@ -3,7 +3,7 @@
 ##############################################################################
 
 $build_environment = {
-'HOME' => '/root'
+'HOME' => '<HOME>'
 };
 
 ##############################################################################
