--- a/examples/bookworm/dotnet/hello-world/src/debian/rules
+++ b/examples/bookworm/dotnet/hello-world/src/debian/rules
@@ -9,3 +9,8 @@ override_dh_auto_install:
 	# This relies on make install script
 	# if there is no install script, you have define your own rules
 	dh_auto_install -- prefix=/usr
+
+override_dh_auto_clean:
+	# on ubuntu clean fails, before dependency installation
+	# on bookworm clean succeeds, even if dependency is not installed
+	make -j1 clean || true
