--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
           sudo apt-get install -y libfilesys-df-perl libmime-lite-perl
           wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6/sbuild_0.85.6_all.deb
           wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6/libsbuild-perl_0.85.6_all.deb
-          sudo dpkg -i sbuild_0.85.6_all.deb libsbuild-perl_0.85.6_all.deb
+          sudo dpkg -i sbuild_0.85.6_all.deb libsbuild-perl_0.85.6_all.deb || true
       - name: Build
         run: cargo build --verbose
 
@@ -61,7 +61,7 @@ jobs:
           sudo apt-get install -y libfilesys-df-perl libmime-lite-perl
           wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6/sbuild_0.85.6_all.deb
           wget https://github.com/eth-pkg/sbuild-ubuntu/releases/download/0.85-6/libsbuild-perl_0.85.6_all.deb
-          sudo dpkg -i sbuild_0.85.6_all.deb libsbuild-perl_0.85.6_all.deb
+          sudo dpkg -i sbuild_0.85.6_all.deb libsbuild-perl_0.85.6_all.deb || true
 
       - name: Build
         run: cargo build --verbose
