--- a/examples/bookworm/dotnet/hello-world/src/debian/rules
+++ b/examples/bookworm/dotnet/hello-world/src/debian/rules
@@ -13,4 +13,4 @@ override_dh_auto_install:
 override_dh_auto_clean:
 	# on ubuntu clean fails, before dependency installation
 	# on bookworm clean succeeds, even if dependency is not installed
-	-make -j1 clean || true
+	-make -j1 clean
