--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ dirs = "5.0.1"
 rand = "0.9.0-alpha.1"
 shellexpand = "3.1.0"
 eyre = "0.6.12"
+sha2 = "0.11.0-pre.3"
 
 [dev-dependencies]
 env_logger = "*"
