feat: add docker group

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,6 @@ thiserror = "1.0"
 tempfile = "3.1"
 log = "0.4"
 env_logger = "0.11.3"
-httpmock = "0.7.0"
 git2 = "0.18.3"
 cargo_metadata = "0.18"
 test-case = "3.3.1"
@@ -23,6 +22,8 @@ rand = "0.9.0-alpha.1"
 shellexpand = "3.1.0"
 eyre = "0.6.12"
 sha2 = "0.11.0-pre.3"
+whoami = "1.5.1"
 
 [dev-dependencies]
 env_logger = "*"
+httpmock = "0.7.0"
