feat: update examples to run lintian

--- a/examples/bookworm/go/hello-world/pkg-builder.toml
+++ b/examples/bookworm/go/hello-world/pkg-builder.toml
@@ -24,7 +24,7 @@ arch = "amd64"
 pkg_builder_version="0.1"
 # TODO not used yet
 debcrafter_version = "latest"
-run_lintian=false
+run_lintian=true
 run_piuparts=false
 run_autopkgtest=false
 # package directory
