--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,6 +48,7 @@ jobs:
           - nim
           - rust
           - typescript
+          - gradle-java
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
