feat: enable piuparts (test of package install/remove automatically on package build)

--- a/examples/bookworm/go/hello-world/pkg-builder.toml
+++ b/examples/bookworm/go/hello-world/pkg-builder.toml
@@ -25,7 +25,7 @@ pkg_builder_version="0.1"
 # TODO not used yet
 debcrafter_version = "latest"
 run_lintian=true
-run_piuparts=false
+run_piuparts=true
 run_autopkgtest=false
 # package directory
 workdir="~/.pkg-builder/packages"
