--- a/src/v1/distribution/debian/.sbuildrc
+++ b/src/v1/distribution/debian/.sbuildrc
@@ -6,6 +6,10 @@ $build_environment = {
 'HOME' => '<HOME>'
 };
 
+$lintian_require_success = 1;
+$piuparts_require_success = 1;
+$autopkgtest_require_success = 1;
+
 ##############################################################################
 # PERL MAGIC
 ##############################################################################
