fix: disable fail-fast

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,9 +49,10 @@ jobs:
           - rust
           - typescript
           - gradle_java
+      fail-fast: false
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Sbuild setup
         run: |
