--- a/examples/bookworm/c/hello-world/pkg-builder.toml
+++ b/examples/bookworm/c/hello-world/pkg-builder.toml
@@ -21,9 +21,9 @@ arch = "amd64"
 pkg_builder_version="0.1"
 # TODO not used yet
 debcrafter_version = "latest"
-run_lintian=false
-run_piuparts=false
-run_autopkgtest=true
+run_lintian=true
+run_piuparts=true
+run_autopkgtest=false
 # package directory
 workdir="~/.pkg-builder/packages"
 
