--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -69,5 +69,7 @@ jobs:
         run: cargo build --verbose
 
       - name: Test ${{ matrix.language }} packaging
-        run: cargo test --verbose --test sbuild tests::test_build_${{ matrix.language }}_package_in_sbuild_env
+        # TODO seperate piuparts and autopkgtest into their own command, as not to run the packaging as root
+        # though as it runs under chroot it won't affect things
+        run: sudo cargo test --verbose --test sbuild tests::test_build_${{ matrix.language }}_package_in_sbuild_env
 
