fix: maybe tests + add dotnet repo

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -71,5 +71,7 @@ jobs:
       - name: Test ${{ matrix.language }} packaging
         # TODO seperate piuparts and autopkgtest into their own command, as not to run the packaging as root
         # though as it runs under chroot it won't affect things
-        run: sudo cargo test --verbose --test sbuild tests::test_build_${{ matrix.language }}_package_in_sbuild_env
+        run: |
+          which cargo
+          sudo /usr/local/cargo/bin/cargo test --verbose --test sbuild tests::test_build_${{ matrix.language }}_package_in_sbuild_env
 
