--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -72,11 +72,11 @@ jobs:
         run: |
           cargo test --verbose --test sbuild tests::test_build_${{ matrix.language }}_package_in_sbuild_env
 
-#      - name: Piuparts on ${{ matrix.language }}
-#        # TODO seperate piuparts and autopkgtest into their own command, as not to run the packaging as root
-#        # though as it runs under chroot it won't affect things
-#        run: |
-#          which cargo
-#          sudo curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sudo sh -s -- -y
-#          sudo /home/runner/.cargo/bin/cargo test --verbose --test sbuild tests::test_build_${{ matrix.language }}_package_in_sbuild_env
-#
+      - name: Piuparts on ${{ matrix.language }}
+        # TODO seperate piuparts and autopkgtest into their own command, as not to run the packaging as root
+        # though as it runs under chroot it won't affect things
+        run: |
+          which cargo
+          sudo curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sudo sh -s -- -y
+          sudo /home/runner/.cargo/bin/cargo test --verbose --test sbuild tests::test_build_${{ matrix.language }}_package_in_sbuild_env_piuparts -- ignored
+
