--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -78,7 +78,8 @@ jobs:
         run: |
           which cargo
           sudo apt-get update
-          sudo apt-get install -y debian-archive-keyring
+          # installing debian-archive-keyring fails on ubuntu LTS, not sure why, but it says it is already installed
+          # sudo apt-get install -y debian-archive-keyring
           sudo curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sudo sh -s -- -y
           sudo /home/runner/.cargo/bin/cargo test --verbose --test sbuild tests::test_build_${{ matrix.language }}_package_in_sbuild_env_piuparts -- --ignored
 
