feat: add autopkgtests, most likely going to fail ci

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -73,8 +73,6 @@ jobs:
           cargo test --verbose --test sbuild tests::test_build_${{ matrix.language }}_package_in_sbuild_env
 
       - name: piuparts
-        # TODO seperate piuparts and autopkgtest into their own command, as not to run the packaging as root
-        # though as it runs under chroot it won't affect things
         run: |
           which cargo
           sudo apt-get update
@@ -82,4 +80,14 @@ jobs:
           # sudo apt-get install -y debian-archive-keyring
           sudo curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sudo sh -s -- -y
           sudo /home/runner/.cargo/bin/cargo test --verbose --test sbuild tests::test_build_${{ matrix.language }}_package_in_sbuild_env_piuparts -- --ignored
+
+      - name: autopkgtests
+        run: |
+          which cargo
+          sudo apt-get update
+          # installing debian-archive-keyring fails on ubuntu LTS, not sure why, but it says it is already installed
+          # sudo apt-get install -y debian-archive-keyring
+          sudo curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sudo sh -s -- -y
+          sudo /home/runner/.cargo/bin/cargo test --verbose --test sbuild tests::test_build_${{ matrix.language }}_package_in_sbuild_env_autopkgtest -- --ignored
+
 
