--- a/examples/bookworm/virtual-package/pkg-builder.toml
+++ b/examples/bookworm/virtual-package/pkg-builder.toml
@@ -17,7 +17,7 @@ pkg_builder_version="0.1"
 debcrafter_version = "latest"
 run_lintian=true
 run_piuparts=true
-run_autopkgtest=true
+run_autopkgtest=false
 # package directory
 workdir="~/.pkg-builder/packages"
 
