--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -90,5 +90,15 @@ jobs:
           # sudo apt-get install -y debian-archive-keyring
           sudo curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sudo sh -s -- -y
           sudo /home/runner/.cargo/bin/cargo test --verbose --test sbuild tests::test_build_${{ matrix.language }}_package_in_sbuild_env_autopkgtest -- --ignored
-
+      
+      - name: verify
+        run: |
+          which cargo
+          sudo apt-get update
+          # installing debian-archive-keyring fails on ubuntu LTS, not sure why, but it says it is already installed
+          # sudo apt-get install -y debian-archive-keyring
+          sudo curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sudo sh -s -- -y
+          cargo test --verbose --test sbuild tests::test_build_${{ matrix.language }}_package_in_sbuild_env_verify
+  
+  
 
