--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ shellexpand = "3.1.0"
 eyre = "0.6.12"
 sha2 = "0.11.0-pre.3"
 whoami = "1.5.1"
+sha1 = "0.11.0-pre.3"
 
 [dev-dependencies]
 env_logger = "*"
