--- a/examples/bookworm/c/hello-world/pkg-builder-verify.toml
+++ b/examples/bookworm/c/hello-world/pkg-builder-verify.toml
@@ -11,4 +11,7 @@ pkg_builder_version="0.1"
 debcrafter_version = "latest"
 
 [verify]
-package_hash=""
+package_hash=[
+    {name= "hello-world_1.0.0-1.dsc", hash="185f22f7ffb22f75eaa54547ceb025f7ac4ecaed"},
+    {name= "hello-world_1.0.0-1_amd64.deb", hash="1fc413dd1ce62e699912ff7753cde05b3bc77b96"}
+]
