--- a/examples/bookworm/dotnet/hello-world/pkg-builder-verify.toml
+++ b/examples/bookworm/dotnet/hello-world/pkg-builder-verify.toml
@@ -12,4 +12,10 @@ pkg_builder_version="0.1"
 debcrafter_version = "latest"
 
 [verify]
-package_hash=""
+package_hash=[
+    { hash="438f14433b15ead82f82aeac83ed4a2bc533d161", name= "hello-world-dotnet_1.0.0-1.dsc"},
+    { hash="0ef2133c3ffe3239f70afcee13ce171a77ed7437", name= "hello-world-dotnet_1.0.0.orig.tar.gz"},
+    { hash="4e2fa2d357b6c2d281514521b9c476fcccfa7cbb", name= "hello-world-dotnet_1.0.0-1.debian.tar.xz"},
+#    { hash="6201935f6ce8c21980f8a3197503f2fbe20c0828", name= "hello-world-dotnet_1.0.0-1_amd64.buildinfo"},
+    { hash="f981f2bd0430714efd3c492832cb21d29193eeac", name= "hello-world-dotnet_1.0.0-1_amd64.deb"},
+]
