--- a/examples/bookworm/javascript/hello-world/pkg-builder-verify.toml
+++ b/examples/bookworm/javascript/hello-world/pkg-builder-verify.toml
@@ -11,6 +11,9 @@ pkg_builder_version="0.1"
 debcrafter_version = "latest"
 
 [verify]
-package_hash=""
-git_commit=""
-bin_bash=""
+package_hash=[
+    { hash="0c7c91a4793031eba8b39a037a328a65eb044289", name= "hello-world-java-gradle_1.0.0-1.dsc"},
+    { hash="8b017e7ea5f6653691e37d324faf40dc15b5cfd5", name= "hello-world-java-gradle_1.0.0.orig.tar.gz"},
+    { hash="f28d4c71c134183e7269bd622dc80a4049a37687", name= "hello-world-java-gradle_1.0.0-1.debian.tar.xz"},
+    { hash="0dc81b3d2be7a8113d6a7505527dca3162c576e6", name= "hello-world-java-gradle_1.0.0-1_amd64.deb"},
+]
