--- a/examples/bookworm/rust/hello-world/pkg-builder-verify.toml
+++ b/examples/bookworm/rust/hello-world/pkg-builder-verify.toml
@@ -30,4 +30,9 @@ pkg_builder_version="0.1"
 debcrafter_version = "latest"
 
 [verify]
-package_hash=""
+package_hash=[
+    { hash="1311291966f8d705a0f37fc9f560987c67d5ffe6", name= "hello-world-rust_1.0.0-1.dsc"},
+    { hash="a9c7bea89015e52a5b4e24544873ec73a0c92af2", name= "hello-world-rust_1.0.0.orig.tar.gz"},
+    { hash="00b8c558300394eeeb2dcd5c43446402a168c8c5", name= "hello-world-rust_1.0.0-1.debian.tar.xz"},
+    { hash="113bea7a10246e72239d48c93a40ac73351dab86", name= "hello-world-rust_1.0.0-1_amd64.deb"},
+]
