--- a/examples/bookworm/virtual-package/pkg-builder-verify.toml
+++ b/examples/bookworm/virtual-package/pkg-builder-verify.toml
@@ -9,8 +9,8 @@ debcrafter_version = "latest"
 
 [verify]
 package_hash=[
-    { hash="da1dedce498c2bc21610e4da2d92480fbb6321e3", name= "hello-world-java-gradle_1.0.0-1.dsc"},
-    { hash="eef991395fabb27016cc1a2e37cbaa04fd869de8", name= "hello-world-java-gradle_1.0.0.orig.tar.gz"},
-    { hash="ef187dd59a4cf750c7c36a7294b2ba10864f9184", name= "hello-world-java-gradle_1.0.0-1.debian.tar.xz"},
-    { hash="c38754817f9de32525893f29a44b0c3d95c20c41", name= "hello-world-java-gradle_1.0.0-1_amd64.deb"},
+    { hash="68a5d0126d982ef8f735e60737626f7cb07acb67", name= "test-virtual-package_1.0.0-1.dsc"},
+    { hash="b35f46d5fb424aee57b5d666e61b2eff83543aad", name= "test-virtual-package_1.0.0.orig.tar.gz"},
+    { hash="e1890ee0bc0c18b995b79deec7b0ae3693f1d43b", name= "test-virtual-package_1.0.0-1.debian.tar.xz"},
+    { hash="e5b4af1f4610db8d83b6d44522d888a3b87dfeed", name= "test-virtual-package_1.0.0-1_amd64.deb"},
 ]
