--- a/examples/bookworm/dotnet/hello-world/src/debian/rules
+++ b/examples/bookworm/dotnet/hello-world/src/debian/rules
@@ -8,7 +8,11 @@ override_dh_dwz:
 
 override_dh_auto_build:
 	mkdir -p bin
-	dotnet build src/hello_world.csproj -o bin --artifacts-path obj
+	# You will need create obj directory and reuse it as dotnet is not so much reproducible without it
+	# you will need to first build the deb file, extract and get the obj dir and copy here
+	# dpkg going to tell you that some of those files are not correct, delete those
+	dotnet build src/hello_world.csproj -o bin --artifacts-path obj  --no-restore --no-dependencies
+	find debian/obj/* -type f -exec md5sum {} +
 	md5sum bin/*
 
 override_dh_auto_install:
@@ -17,4 +21,5 @@ override_dh_auto_install:
 override_dh_auto_clean:
 	# on ubuntu clean fails, before dependency installation
 	# on bookworm clean succeeds, even if dependency is not installed
-	-make -j1 clean
+	#do not delete obj folder
+	#make -j1 clean
