--- a/examples/bookworm/dotnet/hello-world/src/debian/rules
+++ b/examples/bookworm/dotnet/hello-world/src/debian/rules
@@ -11,8 +11,7 @@ override_dh_auto_build:
 	# You will need create obj directory and reuse it as dotnet is not so much reproducible without it
 	# you will need to first build the deb file, extract and get the obj dir and copy here
 	# dpkg going to tell you that some of those files are not correct, delete those
-	dotnet build src/hello_world.csproj -o bin --artifacts-path obj  --no-restore --no-dependencies
-	find debian/obj/* -type f -exec md5sum {} +
+	dotnet build src/hello_world.csproj -o bin --artifacts-path obj
 	md5sum bin/*
 
 override_dh_auto_install:
